# ITOG_DZ

./: README.md
UI_ADM_CONSOLE/: CMakeLists.txt  Logger.h  Message.cpp  Message.h  TCPClient.cpp  TCPClient.h  User.cpp  User.h  clientmainwindow.cpp  loginform.cpp  mainwindow.cpp  mainwindow.ui  netcommon.h  registrationform.cpp  registrationform.h  sha1.cpp  sha1.h  startscreen.cpp  startscreen.h  utils.cpp  utils.h
client+chat/: utils.h
client+chat/Client/: CMakeLists.txt  Message.cpp  TCPClient.cpp  TCPClient.h  main.cpp  sha1.cpp  sha1.h
client+chat/server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  DBAccess.cpp  DBAccess.h  Logger.cpp  Logger.h  Message.cpp  Message.h  TCPServer.cpp  TCPServer.h  User.cpp  User.h  main.cpp
